fix: prevent page overflow on block border
Closes: #363

--- a/src/css/Player.scss
+++ b/src/css/Player.scss
@@ -187,6 +187,7 @@ body{
             border: 1px solid rgb(204, 204, 204);
             font: normal 11px/normal Verdana, Arial, Helvetica, sans-serif;
             border-radius: 10px;
+            overflow: hidden;
 
             button{
                 padding: 0;
